--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "jquery": "^3.1.1",
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
-    "vue": "^2.1.10"
-  },
-  "dependencies": {
-    "buefy": "^0.5.0",
-    "bulma": "^0.5.1"
+    "vue": "^2.4",
+    "buefy": "^0.5.3",
+    "bulma": "^0.5.3",
+    "font-awesome": "^4.7.0"
   }
 }
